--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "maxcrossan/yii_encryption",
     "type": "library",
     "require": {
-        "yiisoft/yii": "1"
+        "yiisoft/yii": "^1"
     },
     "require-dev": {
-        "yiisoft/yii": "1"
+        "yiisoft/yii": "^1"
     },
     "license": "MIT",
     "authors": [
