--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "maxcrossan/yii_encryption",
+    "description": "A simple encryption behaviour for encrypting and decrypting database fields on YIi models",
     "type": "library",
     "require": {
         "yiisoft/yii": "^1"
@@ -8,6 +9,11 @@
         "yiisoft/yii": "^1"
     },
     "license": "MIT",
+    "autoload": {
+        "psr-0": {
+            "Crossan":        "src/",
+        }
+    },
     "authors": [
         {
             "name": "Max Crossan",
