--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "autoload": {
         "psr-0": {
-            "Crossan":        "src/",
+            "Crossan": "src/"
         }
     },
     "authors": [
