--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "maxcrossan/yii_encryption",
-    "description": "A simple encryption behaviour for encrypting and decrypting database fields on YIi models",
+    "description": "A simple encryption behaviour for encrypting and decrypting database fields on Yii models",
     "type": "library",
     "require": {
         "yiisoft/yii": "^1"
